test/tests/errors/error-jumpout-id-not-exp.sm
// true
// false
/**/
/**/

program {
    var x = jumpout j in 1 + j;
}